minor z-index fix

--- a/resources/assets/less/uniform-builder.less
+++ b/resources/assets/less/uniform-builder.less
@@ -1426,3 +1426,7 @@ div.colors_container.colors, div.colors_container.patterns {
     
 }
 
+div.drop {
+    z-index: 100;
+} 
+
